fix: adjust how canvas dimensions are computed
- only trigger the resize observer if the width has actually changed
- base the resolution on the displayed size to prevent blurriness
- only show scrollbars when necessary

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview.scss
@@ -20,7 +20,7 @@
 
 .#{$prefix}--document-preview__document {
   position: relative;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .#{$prefix}--document-preview__document > * {
