feat: allow displaying multiple passages from each document (#397)
* feat: allow displaying multiple passages from each document

- refactor Result component to handle multiple passages
- stack passage and table results vertically
- adjust styling accordingly
- update tests / Storybook
- adjustments from new designs
- review changes
- fix tests
- review changes

(cherry picked from commit 71cb02afa43fae219982a9c893c400054eda3559)

--- a/packages/discovery-styles/scss/components/search-results/_search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/_search-results.scss
@@ -8,6 +8,23 @@ $result-table-fade-offset: calc(#{$result-element-max-height} - #{$result-table-
   align-items: center;
 }
 
+.#{$prefix}--search-results__header__title__text {
+  @include type-style('body-short-01');
+}
+
+.#{$prefix}--search-results__header__title__query {
+  @include type-style('heading-01');
+  margin-left: $spacing-02;
+
+  &:before {
+    content: open-quote;
+  }
+
+  &:after {
+    content: close-quote;
+  }
+}
+
 .#{$prefix}--search-result--loading {
   padding: $spacing-06;
 
@@ -23,62 +40,63 @@ $result-table-fade-offset: calc(#{$result-element-max-height} - #{$result-table-
 .#{$prefix}--search-result {
   @include box-shadow;
   background-color: $result-background;
-  padding: $spacing-05;
   margin: $layout-01 0;
-  border-radius: rem(4px);
   font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
-
-  &:first-of-type {
-    margin-top: 0;
-  }
-
-  &:last-of-type {
-    margin-bottom: 0;
-  }
 }
 
 .#{$prefix}--spelling-suggestion__wrapper {
-  @include type-style('body-short-01');
+  @include type-style('label-01');
   align-items: center;
   display: flex;
   padding: 0;
+  color: $text-02;
 
-  .#{$prefix}--btn--ghost.#{$prefix}--btn--sm {
-    padding-left: $spacing-03;
+  .#{$prefix}--spelling-suggestion {
+    @include type-style('label-01');
+    color: $link-02;
+    min-height: 0;
+    padding: 0;
+    margin-left: $spacing-02;
   }
-}
-
-.#{$prefix}--spelling-suggestion {
-  @include type-style('body-short-01');
 }
 
 .#{$prefix}--search-result--toggle {
   flex-direction: row;
   justify-content: flex-end;
-}
 
-.#{$prefix}--toggle__switch {
-  margin: $spacing-03 $spacing-08 $spacing-03 $spacing-03;
-}
+  .#{$prefix}--toggle__switch {
+    margin: 0 $spacing-08 0 $spacing-03;
+  }
 
-.#{$prefix}--toggle-input__label {
-  align-items: center;
-  display: flex;
-  flex-direction: row;
+  .#{$prefix}--toggle-input__label {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .#{$prefix}--search-result__content-wrapper {
   display: flex;
+  flex-direction: column;
   .#{$prefix}--tile {
     display: flex;
     flex-direction: column;
-    width: 100%;
-  }
-}
+    align-items: flex-start;
 
-.#{$prefix}--search-result__content-wrapper--half {
-  .#{$prefix}--tile {
-    width: 50%;
+    padding-top: $spacing-05;
+    padding-bottom: $spacing-05;
+    margin-right: $spacing-05;
+    margin-left: $spacing-05;
+    border-top: 1px solid $ui-03;
+
+    &:first-child {
+      padding-top: $spacing-05;
+      border-top: none;
+    }
+
+    &:last-child {
+      pading-bottom: $spacing-05;
+    }
   }
 }
 
@@ -106,7 +124,6 @@ $result-table-fade-offset: calc(#{$result-element-max-height} - #{$result-table-
     background-color: $highlight;
     font-style: normal;
     padding: 0 $spacing-02;
-    border-radius: rem(2px);
   }
 }
 
@@ -147,7 +164,9 @@ $result-table-fade-offset: calc(#{$result-element-max-height} - #{$result-table-
   display: flex;
   flex-direction: row-reverse;
   font-size: 0.75rem;
+  min-height: 0;
   padding: 0;
+  margin-top: $spacing-03;
   span {
     flex-grow: 2;
     padding-left: $spacing-03;
@@ -164,11 +183,17 @@ $result-table-fade-offset: calc(#{$result-element-max-height} - #{$result-table-
 
 .#{$prefix}--search-result__footer {
   border-top: 1px solid $ui-03;
-  padding-top: $spacing-05;
+  padding-left: $spacing-05;
+  padding-right: $spacing-05;
   color: $gray-60;
   font-size: $spacing-04;
   display: flex;
   justify-content: space-between;
+
+  > * {
+    padding-top: $spacing-05;
+    padding-bottom: $spacing-05;
+  }
 }
 
 .#{$prefix}--search-result__footer__title {
@@ -183,4 +208,15 @@ $result-table-fade-offset: calc(#{$result-element-max-height} - #{$result-table-
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+
+.#{$prefix}--search-results__empty-list {
+  @include type-style('body-short-02');
+  padding: $spacing-05;
+  color: $ui-05;
+
+  .#{$prefix}--search-results__empty-list__text {
+    @include type-style('caption-01');
+    margin-top: $spacing-03;
+  }
 }
