--- a/packages/discovery-styles/scss/components/search-results/_search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/_search-results.scss
@@ -83,8 +83,7 @@ $result-table-fade-offset: calc(#{$result-element-max-height} - #{$result-table-
     flex-direction: column;
     align-items: flex-start;
 
-    padding-top: $spacing-05;
-    padding-bottom: $spacing-05;
+    padding: $spacing-05 0 $spacing-05 0;
     margin-right: $spacing-05;
     margin-left: $spacing-05;
     border-top: 1px solid $ui-03;
