--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-section.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-section.scss
@@ -15,6 +15,9 @@
 
   .field > * {
     position: absolute;
+    margin: -3px;
+    padding: 1px 1px 0px;
+    box-sizing: content-box;
   }
 
   .field.hover > *,
