feat: pdf single tooltip

--- a/packages/discovery-styles/scss/discovery-components.scss
+++ b/packages/discovery-styles/scss/discovery-components.scss
@@ -17,3 +17,4 @@
 @import 'components/ci-document/ci-document-virtual-scroll';
 @import 'components/ci-document/ci-document';
 @import 'components/structured-query/structured-query';
+@import 'components/tooltip-highlight/tooltip-highlight';
