fix: pdf active color, css !important

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -62,3 +62,10 @@
   padding: 1px 1px 0px;
   box-sizing: content-box;
 }
+
+// Override dynamic styles .category_<facetId>.hc-highlight
+// hc stand for highlight color
+.#{$prefix}--hc-active {
+  background: unset !important;
+  opacity: 100%;
+}
