--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -63,9 +63,8 @@
   box-sizing: content-box;
 }
 
-// Override dynamic styles .category_<facetId>.hc-highlight
-// hc stand for highlight color
-.#{$prefix}--hc-active {
+// Override dynamic styles .category-<facetId>.highlight
+.#{$prefix}--active {
   background: unset !important;
   opacity: 100%;
 }
