feat: text active color and PDF highlight/active colors (#520)
* feat: text active color and PDF highlight/active colors

* feat: support active and highlight

* fix: tweak merge

* fix: pr review

* fix: pdf active color, css !important

* fix: rename css classes and other pr feedback

---------

Co-authored-by: DORIAN MILLER <millerbd@us.ibm.com>

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -46,6 +46,9 @@
 }
 
 .#{$prefix}--document-preview-pdf-viewer-highlight__item {
+  box-sizing: content-box;
+  margin: -3px;
+  padding: 1px 1px 0;
   position: absolute;
   opacity: 20%;
   background: darken(saturate($highlight, 50%), 40%);
@@ -55,4 +58,13 @@
   position: absolute;
   opacity: 35%;
   background: darken(saturate($highlight, 50%), 50%);
+  margin: -3px;
+  padding: 1px 1px 0px;
+  box-sizing: content-box;
+}
+
+// Override dynamic styles .category-<facetId>.highlight
+.#{$prefix}--active {
+  background: unset !important;
+  opacity: 100%;
 }
