--- a/packages/discovery-styles/scss/components/tooltip-highlight/_tooltip-highlight.scss
+++ b/packages/discovery-styles/scss/components/tooltip-highlight/_tooltip-highlight.scss
@@ -1,7 +1,17 @@
-.#{$prefix}--tooltip-hightlight {
+// Keep tooltip top-level
+$tooltip-content-z-index: 50;
+
+.#{$prefix}--tooltip-place-content {
+  position: absolute;
+  z-index: $tooltip-content-z-index;
+  pointer-events: none;
+}
+
+.#{$prefix}--tooltip-box-color {
   flex: 0 0 auto;
-  width: 1rem;
-  height: 1rem;
-  margin-right: 0.5rem;
+  width: $spacing-05;
+  height: $spacing-05;
+  margin-right: $spacing-03;
   border-radius: 3px;
+  display: inline-block;
 }
