fix: add Keyword, create style, move MAX_CONTENT_LENGTH

--- a/packages/discovery-styles/scss/components/tooltip-highlight/_tooltip-highlight.scss
+++ b/packages/discovery-styles/scss/components/tooltip-highlight/_tooltip-highlight.scss
@@ -39,6 +39,10 @@ $tooltip-content-z-index: 50;
   padding: 5px;
 }
 
+.#{$prefix}--tooltip-content-divider {
+  border-bottom: 1px solid #7a7979;
+}
+
 // Create spacing between Category and Value in table
 .#{$prefix}--tooltip-content-cell-buffer {
   margin-right: $spacing-06;
