--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -58,6 +58,7 @@
   position: absolute;
   opacity: 35%;
   background: darken(saturate($highlight, 50%), 50%);
+  border: 2px solid darken(saturate($highlight, 50%), 50%);
   margin: -3px;
   padding: 1px 1px 0px;
   box-sizing: content-box;
