--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -2,6 +2,8 @@
 @import '../../vars';
 @import './mixins';
 
+$hightlight-active-z-index: 200;
+
 .#{$prefix}--document-preview-pdf-viewer {
   display: flex;
 
@@ -68,15 +70,11 @@
 .#{$prefix}--active {
   background: unset !important;
   opacity: 100%;
-  z-index: 200;
+  z-index: $hightlight-active-z-index;
 }
 
 .#{$prefix}--overlap-highlight {
   background: unset;
   border: unset;
   opacity: 100%;
-}
-
-.#{$prefix}--overlap-active-pass-through {
-  pointer-events: none;
 }
