--- a/packages/discovery-styles/scss/components/tooltip-highlight/_tooltip-highlight.scss
+++ b/packages/discovery-styles/scss/components/tooltip-highlight/_tooltip-highlight.scss
@@ -29,14 +29,13 @@ $tooltip-content-z-index: 50;
   flex: 0 0 auto;
   width: $spacing-05;
   height: $spacing-05;
-  margin-right: $spacing-03;
   border-radius: 3px;
   display: inline-block;
 }
 
 .#{$prefix}--tooltip-content-cell {
   vertical-align: top;
-  padding: 5px;
+  padding: $spacing-02;
 }
 
 .#{$prefix}--tooltip-content-divider {
