feat: on active enrichment, tooltip displays overlap info

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -78,3 +78,7 @@ $hightlight-active-z-index: 200;
   border: unset;
   opacity: 100%;
 }
+
+.#{$prefix}--overlap-active-pass-through {
+  pointer-events: none;
+}
