build: first pass at using vite to build

--- a/packages/discovery-styles/scss/components/search-results/_search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/_search-results.scss
@@ -94,7 +94,7 @@ $result-table-fade-offset: calc(#{$result-element-max-height} - #{$result-table-
     }
 
     &:last-child {
-      pading-bottom: $spacing-05;
+      padding-bottom: $spacing-05;
     }
   }
 }
