--- a/packages/discovery-styles/scss/components/ci-document/_ci-document.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document.scss
@@ -28,9 +28,9 @@
   }
 
   .#{$prefix}--ci-doc__nav {
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
     min-width: 150px;
-    text-align: center;
   }
 
   .#{$prefix}--ci-doc__title,
