fix: Add position: relative to checkboxes, radio buttons, and data table to work around Chromium UI issue.

--- a/examples/discovery-search-app/src/app.scss
+++ b/examples/discovery-search-app/src/app.scss
@@ -148,3 +148,13 @@ h1 {
     min-height: 0;
   }
 }
+
+.#{$prefix}--checkbox-wrapper,
+.#{$prefix}--radio-button-wrapper,
+.#{$prefix}--data-table {
+  // This is to work around a Chrome quirk where focus on a Carbon checkbox or radio button will
+  // sometimes cause parts of the UI to move upwards, making it partially unusable.
+  position: relative;
+}
+
+
