fix: position text layer wrapper absolute

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -29,6 +29,12 @@ $hightlight-active-z-index: 200;
   // Prevent bottom whitespace from displaying
   line-height: 0;
 
+  .textLayerWrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
   @include pdfjsTextLayer;
 }
 
